Fix loading issues and clean up console logs
- Fixed infinite loading issue in AuthContext by simplifying user profile loading
- Removed all console.log statements from the application
- Fixed JSX attribute issues in styled components (jsx='true')
- Added fallback functions in Login component to prevent auth errors
- Added template files for MCP configuration
- Updated .gitignore to protect sensitive MCP server details

--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,16 @@
 .env.test.local
 .env.production.local
 
+# MCP Server Configuration (contains sensitive data)
+supabase-mcp-config.env
+.cursor/mcp.json
+setup-supabase-mcp.sh
+SUPABASE_MCP_SETUP.md
+
+# Test files with sensitive data
+test_user_auth.js
+test-ai-generation.js
+
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
