fix: comprehensive favicon update across entire project
- Fix root index.html favicon references
- Update notificationService.js to use new favicon
- Fix manifest.json favicon reference
- Update all notification icons to use sl-icon.ico
- This should finally resolve all favicon cache issues
- Found and fixed favicon references in 4 different files

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,7 +4,7 @@
   "description": "A spiritual confession and reflection app for daily spiritual practice",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "sl-icon.ico",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     },
