🚀 Fix Vercel deployment issues
- Added terser dependency for minification
- Optimized Vite build configuration for Vercel
- Fixed environment variable handling for Vercel compatibility
- Added code splitting for better performance
- Created comprehensive deployment guide
- Added .vercelignore to exclude unnecessary files
- Improved bundle optimization with manual chunks
- Fixed build target and CSS code splitting

--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,7 @@
 {
+  "buildCommand": "npm run build",
+  "outputDirectory": "dist",
+  "framework": "vite",
   "rewrites": [
     {
       "source": "/(.*)",
@@ -23,5 +26,10 @@
         }
       ]
     }
-  ]
+  ],
+  "functions": {
+    "app/api/**/*.js": {
+      "runtime": "nodejs18.x"
+    }
+  }
 }
