--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "@radix-ui/react-toggle": "^1.1.10",
     "@radix-ui/react-toggle-group": "^1.1.11",
     "@radix-ui/react-tooltip": "^1.2.8",
-    "@supabase/supabase-js": "^2.75.0",
+    "@supabase/supabase-js": "^2.86.0",
     "@tailwindcss/vite": "^4.1.14",
     "@tanstack/react-query": "^5.83.0",
     "@testing-library/dom": "^10.4.1",
@@ -42,6 +42,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^3.6.0",
+    "dotenv": "^17.2.3",
     "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.462.0",
