--- a/public/manifest.json
+++ b/public/manifest.json
@@ -36,9 +36,13 @@
   "start_url": ".",
   "display": "standalone",
   "orientation": "portrait",
-  "theme_color": "#8B5CF6",
-  "background_color": "#F8FAFC",
-  "categories": ["lifestyle", "productivity", "spirituality"],
+  "theme_color": "#111827",
+  "background_color": "#FDFCF8",
+  "categories": [
+    "lifestyle",
+    "productivity",
+    "spirituality"
+  ],
   "lang": "en",
   "scope": "/",
   "prefer_related_applications": false
