feat: Implement PWA, Declarations System, and Notifications
- Added PWA support with manifest, service worker, and install prompt
- Implemented Declarations System with recording and playback
- Added Notifications System with admin panel and inbox
- Updated UI for better user experience
- Fixed various bugs and improved error handling

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,49 +1,99 @@
 {
+  "name": "SpeakLife - Daily Bible & Spiritual Growth",
   "short_name": "SpeakLife",
-  "name": "SpeakLife - Spiritual Confession App",
-  "description": "A spiritual confession and reflection app for daily spiritual practice",
+  "description": "Transform your life through daily Bible reading, confessions, and spiritual community",
+  "start_url": "/",
+  "display": "standalone",
+  "background_color": "#ffffff",
+  "theme_color": "#7c3aed",
+  "orientation": "portrait",
   "icons": [
     {
-      "src": "sl-icon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
-    },
-    {
-      "src": "logo192.svg",
-      "type": "image/svg+xml",
-      "sizes": "192x192",
-      "purpose": "any maskable"
-    },
-    {
-      "src": "logo192.png",
+      "src": "/icons/icon-72x72.png",
+      "sizes": "72x72",
       "type": "image/png",
-      "sizes": "192x192",
       "purpose": "any maskable"
     },
     {
-      "src": "logo512.svg",
-      "type": "image/svg+xml",
-      "sizes": "512x512",
-      "purpose": "any maskable"
-    },
-    {
-      "src": "logo512.png",
+      "src": "/icons/icon-96x96.png",
+      "sizes": "96x96",
       "type": "image/png",
+      "purpose": "any maskable"
+    },
+    {
+      "src": "/icons/icon-128x128.png",
+      "sizes": "128x128",
+      "type": "image/png",
+      "purpose": "any maskable"
+    },
+    {
+      "src": "/icons/icon-144x144.png",
+      "sizes": "144x144",
+      "type": "image/png",
+      "purpose": "any maskable"
+    },
+    {
+      "src": "/icons/icon-152x152.png",
+      "sizes": "152x152",
+      "type": "image/png",
+      "purpose": "any maskable"
+    },
+    {
+      "src": "/icons/icon-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "any maskable"
+    },
+    {
+      "src": "/icons/icon-384x384.png",
+      "sizes": "384x384",
+      "type": "image/png",
+      "purpose": "any maskable"
+    },
+    {
+      "src": "/icons/icon-512x512.png",
       "sizes": "512x512",
+      "type": "image/png",
       "purpose": "any maskable"
     }
   ],
-  "start_url": ".",
-  "display": "standalone",
-  "orientation": "portrait",
-  "theme_color": "#111827",
-  "background_color": "#FDFCF8",
+  "screenshots": [
+    {
+      "src": "/screenshots/home.png",
+      "sizes": "540x720",
+      "type": "image/png",
+      "form_factor": "narrow"
+    }
+  ],
   "categories": [
     "lifestyle",
-    "productivity",
-    "spirituality"
+    "books",
+    "education"
   ],
-  "lang": "en",
-  "scope": "/",
-  "prefer_related_applications": false
+  "shortcuts": [
+    {
+      "name": "Bible Reader",
+      "short_name": "Bible",
+      "description": "Read the Bible",
+      "url": "/?tab=bible",
+      "icons": [
+        {
+          "src": "/icons/icon-96x96.png",
+          "sizes": "96x96"
+        }
+      ]
+    },
+    {
+      "name": "Journal",
+      "short_name": "Journal",
+      "description": "Write confessions",
+      "url": "/?tab=journal",
+      "icons": [
+        {
+          "src": "/icons/icon-96x96.png",
+          "sizes": "96x96"
+        }
+      ]
+    }
+  ]
 }
