--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
     "globals": "^15.15.0",
     "lovable-tagger": "^1.1.11",
     "postcss": "^8.5.6",
+    "sharp": "^0.34.5",
     "tailwindcss": "^4.1.14",
     "terser": "^5.44.0",
     "typescript": "^5.8.3",
