--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.0.0",
+    "web-push": "^3.6.7",
     "zod": "^3.25.76"
   },
   "scripts": {
