--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-day-picker": "^9.4.6",
     "react-dom": "^19.2.0",
     "react-hook-form": "^7.61.1",
+    "react-markdown": "^10.1.0",
     "react-resizable-panels": "^2.1.9",
     "react-router-dom": "^6.30.1",
     "recharts": "^2.15.4",
