--- a/supabase/functions/push-notification/deno.json
+++ b/supabase/functions/push-notification/deno.json
@@ -5,7 +5,7 @@
         "start": "deno run --allow-net --allow-env index.ts"
     },
     "imports": {
-        "web-push": "https://esm.sh/web-push@3.6.7",
-        "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@2.39.7"
+        "web-push": "npm:web-push@3.6.7",
+        "@supabase/supabase-js": "jsr:@supabase/supabase-js@2"
     }
 }
